<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_margin="5dp"

    android:background="@color/cardview_light_background"
    app:cardCornerRadius="5dp"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_macro_editor_action_name"
                    style="?android:textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/action_editor_example_text"
                    android:textColor="@color/abc_primary_text_material_light"/>

                <TextView
                    android:id="@+id/textview_macro_editor_action_device"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="on Device X (this device)" />

                <TextView
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/parameters_label_text" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/delete_action_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/full_transparent"
                android:contentDescription="@string/delete_action_text"
                android:src="@drawable/ic_action_trash_red"
                android:layout_margin="5dp"/>

            <ImageButton
                android:id="@+id/drag_to_sort_action_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/full_transparent"
                android:contentDescription="@string/drag_to_sort_action"
                android:src="@drawable/ic_action_sort"
                android:layout_margin="5dp"/>

        </LinearLayout>



        <android.support.v7.widget.RecyclerView
            android:id="@+id/action_parameter_list_recycler"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:scrollbarAlwaysDrawVerticalTrack="true"

            android:scrollbars="vertical"
            android:visibility="visible"
            />

    </LinearLayout>

</android.support.v7.widget.CardView>