<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sinapsi.android.view.editor.EditorActivityBeta">

    <ProgressBar
        android:id="@+id/editor_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/editor_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="80dp">

                <TextView
                    style="?android:textAppearanceLarge"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/macro_uppercase_text"
                    android:textColor="@color/sinapsi_blue" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical">

                    <TextView
                        style="?android:textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/macro_editor_macro_name"
                        android:textColor="@color/sinapsi_blue" />

                    <EditText
                        android:id="@+id/edittext_macro_editor_macro_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:hint="@string/macro_name_hint"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/abc_secondary_text_material_light" />

                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/sinapsi_blue" />

                <TextView
                    style="?android:textAppearanceLarge"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/trigger_uppercase_text"
                    android:textColor="@color/sinapsi_blue" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"

                    android:background="@color/cardview_light_background"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textview_macro_editor_trigger_name"
                                    style="?android:textAppearanceLarge"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:text="@string/trigger_empty_raw_text"
                                    android:textColor="@color/abc_primary_text_material_light" />

                                <TextView
                                    android:id="@+id/textview_macro_editor_trigger_device"
                                    style="?android:textAppearanceSmall"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:text="on Device X (this device)" />

                                <TextView
                                    style="?android:textAppearanceSmall"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:text="@string/parameters_label_text" />

                            </LinearLayout>

                            <View
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_weight="1" />

                            <ImageButton
                                android:id="@+id/select_trigger_button"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_margin="5dp"
                                android:background="@color/full_transparent"
                                android:contentDescription="@string/select_trigger_text"
                                android:src="@drawable/ic_action_gear" />

                        </LinearLayout>


                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/trigger_parameter_list_recycler"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:padding="5dp"
                            android:scrollbars="vertical"
                            android:visibility="visible" />

                    </LinearLayout>


                </android.support.v7.widget.CardView>


                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/sinapsi_blue" />

                <TextView
                    style="?android:textAppearanceLarge"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/actions_uppercase_text"
                    android:textColor="@color/sinapsi_blue" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/action_list_recycler"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:scrollbars="vertical"
                    android:visibility="visible"
                    android:clipToPadding="false" />

            </LinearLayout>

        </ScrollView>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/new_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            fab:fab_colorNormal="@color/sinapsi_blue"
            fab:fab_colorPressed="@color/sinapsi_blue_dark"
            fab:fab_icon="@drawable/ic_action_add"
            fab:fab_size="normal" />

    </RelativeLayout>


</RelativeLayout>
